(Mostly) fix entry-nav on tablets

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -174,6 +174,10 @@ td {
     height: 60vh;
 }
 
+.desktop {
+    display: none;
+}
+
 .entry-nav {
     display: flex;
     padding: 16px;
@@ -435,5 +439,13 @@ td {
 
     .contact-hero {
         height: 100vh;
+    }
+
+    .desktop {
+        display: unset;
+    }
+
+    .not-desktop {
+        display: none;
     }
 }
